fixed menu spacing

--- a/gaming2.css
+++ b/gaming2.css
@@ -37,7 +37,7 @@ h1{
   text-decoration: none;
   font-size: 55%;
   padding: 3%;
-  margin-top: 2%;
+  margin-top: .5%;
   float: right;
   font-family: "Verdana", Verdana, sans-serif;
 }
@@ -49,7 +49,7 @@ h1{
   text-decoration: none;
   font-size: 55%;
   padding: 3%;
-  margin-top: 2%;
+  margin-top: .5%;
   float: right;
   font-family: "Verdana", Verdana, sans-serif;
 }
@@ -60,7 +60,7 @@ h1{
   text-decoration: none;
   font-size: 55%;
   padding: 3%;
-  margin-top: 2%;
+  margin-top: .5%;
   float: right;
   font-family: "Verdana", Verdana, sans-serif;
 }
@@ -71,7 +71,7 @@ h1{
   text-decoration: none;
   font-size: 55%;
   padding: 3%;
-  margin-top: 2%;
+  margin-top: .5%;
   float: right;
   font-family: "Verdana", Verdana, sans-serif;
 }
